# TheGame

./: FakeServer.py  Fps.py  LICENSE  MAKEFILE  README.md  Server.py  animations.py  characters.py  clients.py  colors.py  fonts.py  fps.py  gameworld.py  levels.py  log_file_1.txt  log_file_2.txt  log_file_3.txt  main.py  pyproject.toml  server2023.py  temprory codes.py  thegame.py  weapons.py
Tiler/: First Asset pack.tsx  Level_0.tsx  Level_64.tsx
src/: Server.py  animations.py  characters.py  clients.py  explosion.py  fonts.py  gameworld.py  levels.py  main.py  sounds.py  thegame.py  weapons.py
src/TheGame/: Server.py  animations.py  characters.py  clients.py  colors.py  explosion.py  fps.py  gameworld.py  levels.py  log_file_1.txt  main.py  sounds.py  thegame.py  weapons.py
src/TheGame.egg-info/: PKG-INFO  SOURCES.txt
src/TheGame/assets/: 0x464F5220444F45
src/TheGame/docs/: Server.rst  characters.rst  conf.py  explosion.rst  levels.rst
src/TheGame/docs/_build/doctrees/: Server.doctree  TheGame.doctree  animations.doctree  characters.doctree  clients.doctree  colors.doctree  environment.pickle  explosion.doctree  fonts.doctree  fps.doctree  gameworld.doctree  index.doctree  levels.doctree  main.doctree  modules.doctree  sounds.doctree  weapons.doctree
src/TheGame/docs/_build/html/: .buildinfo  Server.html  TheGame.html  animations.html  characters.html  clients.html  colors.html  explosion.html  fonts.html  fps.html  gameworld.html  genindex.html  index.html  levels.html  main.html  modules.html  objects.inv  py-modindex.html  search.html  (+3 more)
tests/: animations_tests.py
(+12 files in other folders)
